--- a/src/assets/scss/elements/blocks/_menuRight.scss
+++ b/src/assets/scss/elements/blocks/_menuRight.scss
@@ -9,7 +9,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 21;
     transform: translateX(100%);
     transition-duration: 0.5s;
     overflow: hidden;
